Fixed spacing issue.

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -11,7 +11,6 @@ html {
 }
 
 body {
-  overflow-x: hidden;
   position: relative;
   margin: 0;
   min-height: 100vh;
